{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 9,
  "lineage": "59aa039c-1e5d-b1bb-ed97-cfdf1c4e847f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "quest_ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:198813916426:internet-gateway/igw-0c94edf32a08225af",
            "id": "igw-0c94edf32a08225af",
            "owner_id": "198813916426",
            "tags": {
              "Name": "Quest App Internet Gateway"
            },
            "tags_all": {
              "Name": "Quest App Internet Gateway"
            },
            "vpc_id": "vpc-01dadac059f50f739"
          },
          "dependencies": [
            "aws_vpc.quest_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "quest_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:198813916426:route-table/rtb-03a6a82f616c6327c",
            "id": "rtb-03a6a82f616c6327c",
            "owner_id": "198813916426",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c94edf32a08225af",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c94edf32a08225af",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Quest Public Route Table"
            },
            "tags_all": {
              "Name": "Quest Public Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-01dadac059f50f739"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.quest_ig",
            "aws_vpc.quest_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "quest_public_rt_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01b83bbd99461194b",
            "route_table_id": "rtb-03a6a82f616c6327c",
            "subnet_id": "subnet-05dab1ba2d8c8f666"
          },
          "dependencies": [
            "aws_internet_gateway.quest_ig",
            "aws_route_table.quest_public_rt",
            "aws_subnet.quest_public_subnet",
            "aws_vpc.quest_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "quest_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:198813916426:security-group/sg-0444a96bd09aebd6b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0444a96bd09aebd6b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "HTTP, SSH, and Quest_Port",
            "name_prefix": "",
            "owner_id": "198813916426",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01dadac059f50f739"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.quest_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "quest_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:198813916426:subnet/subnet-0d2dfadde7abaea6b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d2dfadde7abaea6b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "198813916426",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Quest Private Subnet"
            },
            "tags_all": {
              "Name": "Quest Private Subnet"
            },
            "vpc_id": "vpc-01dadac059f50f739"
          },
          "dependencies": [
            "aws_vpc.quest_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "quest_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:198813916426:subnet/subnet-05dab1ba2d8c8f666",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05dab1ba2d8c8f666",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "198813916426",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Quest Public Subnet"
            },
            "tags_all": {
              "Name": "Quest Public Subnet"
            },
            "vpc_id": "vpc-01dadac059f50f739"
          },
          "dependencies": [
            "aws_vpc.quest_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "quest_public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:198813916426:subnet/subnet-0ba0f5c56966e74da",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ba0f5c56966e74da",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "198813916426",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Quest Public Subnet2"
            },
            "tags_all": {
              "Name": "Quest Public Subnet2"
            },
            "vpc_id": "vpc-01dadac059f50f739"
          },
          "dependencies": [
            "aws_vpc.quest_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "quest_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:198813916426:vpc/vpc-01dadac059f50f739",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-001a6e6a61f3cdae5",
            "default_route_table_id": "rtb-03b66c644ff3db72c",
            "default_security_group_id": "sg-0480a61446bc0ff5e",
            "dhcp_options_id": "dopt-08c1b88ca7273aab3",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01dadac059f50f739",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03b66c644ff3db72c",
            "owner_id": "198813916426",
            "tags": {
              "Name": "Quest VPC"
            },
            "tags_all": {
              "Name": "Quest VPC"
            }
          }
        }
      ]
    }
  ]
}